--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD de Produtos - Sistema Distribuído</title>
-    <link rel="stylesheet" href="index_arquivos/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
